Log EffectiveConnectionType from SystemProfileProto in UKM.

Previously, we logged the net::EffectiveConnectionType when a
new page load was started, however this enum is not intended
to be persisted. This change moves to logging the
SystemProfileProto version instead.

Bug: 749172
Change-Id: I1a7ab46fea6adedf5bf7d5ecae904ce796da83cd